# bilingual-rag

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  eval_results.jsonl  pyproject.toml  pytest.ini  render.yaml  requirements.ci.txt  requirements.dev.txt  requirements.txt
.github/workflows/: ci.yml  docker.yml
api/: .dockerignore  Dockerfile  main.py  requirements.txt
api/core/: config.py  db.py  errors.py  lang.py  llm.py  logging.py  memory.py
api/rag/: chunk.py  cleaning.py  embed.py  fetch.py  generate.py  rerank.py  retrieve.py  router.py  store.py
api/routers/: debug.py  health.py  ingest.py  metrics.py  query.py
data/: data_sources.yaml  docs_catalog.json  faq.jsonl  gold_set.json
docs/: ARCHITECTURE.md  CASE_STUDY.md  DEPLOY.md  MODEL_CARD.md  RESULTS.md  RUNBOOK.md  TROUBLESHOOTING.md
eval/ablations/: RESULTS.md
eval/baseline/: baseline_metrics.md  eval_results.jsonl
migrations/: 001_init.sql  002_index_name.sql  004_retention.sql  005_documents_columns.sql
scripts/: db_backup.sh  db_maint.sql  db_restore.sh  eval_retrieval.py  ingest_catalog.py  ingest_catalog.sh  reindex_variant.py  seed_minimal.py  wait_for_ready.sh
tests/: conftest.py  test_answer_language.py  test_baseline_eval.py  test_chunking.py  test_embeddings.py  test_faithfulness_overlap.py  test_freshness.py  test_gold_catalog.py  test_query_contract.py  test_retrieval_contract.py  test_router_faq.py
ui/: .dockerignore  Dockerfile  app.py  requirements.txt
